# optimized-sssp

./: .gitignore  BENCHMARKS_SOURCE_CONTROL.md  LICENSE  Makefile  README.md  README_API.md  cross_lang_tmp.json  optimized-sssp.sln  results.json  rust_variant_bench.json  scaling_results_sample.json  sssp_core.pc
.github/workflows/: ci.yml
benchmarks/: benchmark_rust_variants.py  cross_language_benchmark.md  cross_language_runner.py  generate_charts.py  performance_data.json  plot_performance.py  rust_spec_baseline_big.json  rust_spec_baseline_sample.json  scaling_analysis.py  stat_full.json  stat_sample.json  statistical_benchmark.py
docs/: IMPLEMENTATION_STATUS.md  MULTI_LEVEL_RECURSION_PLAN.md  PHASE2_DESIGN.md  PHASE2_STABILIZATION_PLAN.md  PHASE3_BOUNDARY_CHAIN.md  SSSP_SPEC_SNAPSHOT.md
examples/: csharp_library_usage.cs  go_library_usage.go
implementations/python/: benchmark_rust_variants.py  rust_sssp.py  rust_variant_bench.json  test_heavy_ratio.py  test_khop_correctness.py
implementations/python/algorithm/: __init__.py
implementations/rust/: README.md
implementations/rust/sssp_core/: Cargo.toml  rust_variant_bench.json
implementations/rust/sssp_core/benchmarks/: native_sample.json
implementations/rust/sssp_core/examples/: bench_spec.rs  run_one.rs  run_phase1.rs
implementations/rust/sssp_core/src/: lib.rs  spec_clean.rs  spec_future.rs
implementations/rust/sssp_core/tests/: harness_parity.rs
wrappers/: README.md
wrappers/csharp/: RustSssp.cs  SmokeTest.cs
wrappers/go/: go.mod  sssp.go  sssp_test.go
